# embassy-os

agent/src/Handler/: Apps.hs
agent/src/Lib/: Synchronizers.hs
appmgr/: Cargo.toml
appmgr/src/: actions.rs  apps.rs  backup.rs  context.rs  control.rs  dependencies.rs  disks.rs  error.rs  id.rs  index.rs  inspect.rs  install.rs  lan.rs  lib.rs  logs.rs  main.rs  manifest.rs  pack.rs  registry.rs  remove.rs  tor.rs  update.rs  util.rs  volume.rs
appmgr/src/action/: mod.rs
appmgr/src/backup_new/: mod.rs
appmgr/src/config/: mod.rs  rules.rs  spec.rs  util.rs
appmgr/src/context/: cli.rs  mod.rs  rpc.rs
appmgr/src/s9pk/: builder.rs  header.rs  id.rs  manifest.rs  mod.rs  reader.rs
appmgr/src/version/: mod.rs  v0_2_9.rs
frontend/: package-lock.json  package.json
ui/: package-lock.json  package.json
ui/src/app/pages/apps-routes/app-installed-list/: app-installed-list.page.ts
ui/src/app/pages/apps-routes/app-installed-show/: app-installed-show.page.ts
ui/src/app/pages/server-routes/server-show/: server-show.page.html  server-show.page.ts
ui/src/app/services/: config.service.ts
ui/src/app/services/api/: api.service.factory.ts  api.service.ts  live-api.service.ts
