[package]
authors = ["Dr. BoneZ <drbonez@start9labs.com>"]
description = "Manage applications installed on the Start9 Embassy"
edition = "2018"
name = "appmgr"
version = "0.2.9"

[lib]
name = "appmgrlib"
path = "src/lib.rs"

[[bin]]
name = "appmgrd"
path = "src/main.rs"

[[bin]]
name = "appmgr"
path = "src/cli.rs"

[features]
avahi = ["avahi-sys"]
default = ["avahi"]
portable = []
production = []

[dependencies]
async-stream = "0.3.0"
async-trait = "0.1.42"
avahi-sys = { git = "https://github.com/Start9Labs/avahi-sys", branch = "feature/dynamic-linking", features = ["dynamic"], optional = true }
base32 = "0.4.0"
clap = "2.33"
ctrlc = "3.1.7"
ed25519-dalek = "1.0.1"
emver = { version = "0.1.0", features = ["serde"] }
failure = "0.1.8"
futures = "0.3.12"
git-version = "0.3.4"
http = "0.2.3"
hyper = "0.14.2"
itertools = "0.10.0"
lazy_static = "1.4"
libc = "0.2.86"
linear-map = { version = "1.2", features = ["serde_impl"] }
log = "0.4.13"
nix = "0.19.1"
openssl = "0.10.32"
patch-db = { path = "../../patch-db" }
pest = "2.1"
pest_derive = "2.1"
pin-project = "1.0.4"
prettytable-rs = "0.8.0"
rand = "0.8.3"
regex = "1.4.3"
reqwest = { version = "0.11.0", features = ["stream", "json"] }
rpassword = "5.0.1"
rust-argon2 = "0.8.3"
scopeguard = "1.1" # because avahi-sys fucks your shit up
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_cbor = "0.11.1"
serde_json = "1.0.61"
serde_yaml = "0.8.15"
simple-logging = "2.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-compat-02 = "0.2.0"
tokio-tar = { version = "0.4.0", path = "../../tokio-tar" }
yajrc = { version = "0.1.0", git = "https://github.com/dr-bonez/yajrc", rev = "c2952a4a21c50f7be6f8003afa37ee77deb66d56" }

# to delete
file-lock = "*"
