[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "embassy"
version = "0.3.0"

[lib]
name = "embassy"
path = "src/lib.rs"

[[bin]]
name = "embassyd"
path = "src/bin/embassyd.rs"

[[bin]]
name = "embassy-sdk"
path = "src/bin/embassy-sdk.rs"

[[bin]]
name = "embassy-cli"
path = "src/bin/embassy-cli.rs"

[features]
avahi = ["avahi-sys"]
default = ["avahi"]
portable = []
production = []

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.42"
avahi-sys = { git = "https://github.com/Start9Labs/avahi-sys", branch = "feature/dynamic-linking", features = ["dynamic"], optional = true }
base32 = "0.4.0"
clap = "2.33"
ctrlc = "3.1.7"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
emver = { version = "0.1.0", features = ["serde"] }
file-lock = "1.1"
futures = "0.3.8"
git-version = "0.3.4"
hashlink = "0.6.0"
http = "0.2.3"
itertools = "0.10.0"
lazy_static = "1.4"
libc = "0.2.86"
linear-map = { version = "1.2", features = ["serde_impl"] }
log = "0.4.11"
nix = "0.20.0"
openssl = "0.10.30"
patch-db = { git = "https://github.com/Start9Labs/patch-db" }
pest = "2.1"
pest_derive = "2.1"
pin-project = "1.0.6"
prettytable-rs = "0.8.0"
rand = "0.8.3"
regex = "1.4.2"
reqwest = { version = "0.11.2", features = ["stream", "json"] }
rpassword = "5.0.0"
rpc-toolkit = { version = "*", path = "../../rpc-toolkit/rpc-toolkit" }
rust-argon2 = "0.8.3"
scopeguard = "1.1" # because avahi-sys fucks your shit up
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_cbor = "0.11.1"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
sha2 = "0.9.3"
simple-logging = "2.0"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tokio-compat-02 = "0.2.0"
tokio-stream = { version = "0.1.5", features = ["io-util"] }
tokio-tar = { git = "https://github.com/dr-bonez/tokio-tar.git", branch = "tokio-1" }
typed-builder = "0.9.0"
